--- a/index.html
+++ b/index.html
@@ -3,9 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>primeiro projeto git</title>
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
+    <title>novo-projeto-treino</title>
 </head>
 <body>
-    
+    <div class="wrapper">
+
+    <section class="container-left">
+            <h1>WE CARE</h1>
+            <h2>About your pet</h2>
+            <p>Lorem ipsum dolor sit amet consecteturad cing elit aenean a justo quis mauris hendri pellentesque eget at ipsumuis cursusturpi.</p>
+            <button class="button-left">EXPLORE</button>
+    </section>
+
+
+<section class="container-right">
+    <header>
+            <a>Home</a>
+            <a>About</a>
+            <a>Product</a>
+            <a>Contact</a>
+        <button class="button-right">LOG IN</button>
+    </header>
+
+     <img src="./img/02.png" alt="Adote seu pet">
+
+</section>
+
+
+</div>
 </body>
 </html>
